--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "janus/closetag"]
 	path = janus/closetag
 	url = https://github.com/vim-scripts/closetag.vim.git
+[submodule "gitignore-boilerplates"]
+	path = gitignore-boilerplates
+	url = https://github.com/simonwhitaker/gitignore-boilerplates.git
